chore: add address and user with address
